# OpenCompute

firstAgent/: .cursorrules  README.md  pyproject.toml  requirements.txt
firstAgent/data/sample_docs/: quickstart1.txt  quickstart2.txt  sample1.txt  sample2.txt
firstAgent/output/: cards.jsonl  chunks.jsonl  manifest.json
firstAgent/src/dkc/: __init__.py  cards.py  chunker.py  cli.py  eval.py  loader.py  processors.py  schema.py  schemas.py  utils.py  writer.py
firstAgent/tests/: __init__.py  test_cli.py  test_processors.py  test_smoke.py
simple/: .cursorrules  README.md  highlights.json  highlights.md  requirements.txt
simple/data/: highlights.json  highlights.md  sample_notes.txt
simple/src/hi5/: cli.py  schema.py  score.py  select.py  writer.py
simple/tests/: test_smoke.py
