[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dkc"
version = "0.1.0"
description = "Document Knowledge Converter - converts PDFs/TXTs to knowledge cards and chunks"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pypdf>=4.2",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dkc = "dkc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
